--- a/Projeto_Imersao_24.ipynb
+++ b/Projeto_Imersao_24.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAk95rQ4HHCr0Y9VcM6iNQ",
+      "authorship_tag": "ABX9TyNXGS0q4oKKQ2sLDljMF9tq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,14 +43,14 @@
         "# Import the Python SDK\n",
         "import google.generativeai as genai\n",
         "\n",
-        "\n",
-        "GOOGLE_API_KEY=\"AIzaSyBzX-hLKj7iRu2WKIMpBJjlZcCXLzGCpts\"\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "from google.colab import userdata\n",
+        "api_key = userdata.get('SECRET_KEY')\n",
+        "genai.configure(api_key=api_key)"
       ],
       "metadata": {
         "id": "b7nVNeHtc-Bg"
       },
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": []
     },
     {
